syntax = "proto3";

package com.voteva.tests.grpc.model.v1;

option java_multiple_files = true;


// Request

message GGetTestRequest {
     string uuid = 1;
}

message GAddTestRequest {
    string testName = 1;
    GTestCategory testCategory = 2;
    repeated GQuestion questions = 3;
}

message GRemoveTestRequest {
    string uuid = 1;
}

message GTestListRequest {}


// Response

message GGetTestResponse {
    GTestInfo testInfo = 1;
}

message GAddTestResponse {
    string uuid = 1;
}

message GRemoveTestResponse {}

message GTestListResponse {
    repeated GTestInfo tests = 1;
}


// Model

message GTestInfo {
    string testUid = 1;
    string testName = 2;
    GTestCategory testCategory = 3;
    repeated GQuestion questions = 4;
}

message GQuestion {
    string text = 1;
    string rightAnswer = 2;
    repeated string answerChoices = 3;
}

enum GTestCategory {
    COMMON = 0;
    JAVA = 1;
    C_SHARP = 2;
    PYTHON = 3;
    GO = 4;
}
