syntax = "proto3";

package com.voteva.tests.grpc.service.v1;

import "common/model/model.proto";
import "tests/v1/model/request.proto";
import "tests/v1/model/response.proto";

option java_multiple_files = true;


service TestsServiceV1 {

    rpc getTestCategories (com.voteva.tests.grpc.model.v1.GGetTestCategoriesRequest) returns (com.voteva.tests.grpc.model.v1.GGetTestCategoriesResponse);

    rpc getAllTests (com.voteva.tests.grpc.model.v1.GGetAllTestsRequest) returns (com.voteva.tests.grpc.model.v1.GGetAllTestsResponse);

    rpc getTestsByCategory (com.voteva.tests.grpc.model.v1.GGetTestsByCategoryRequest) returns (com.voteva.tests.grpc.model.v1.GGetTestsByCategoryResponse);

    rpc getTest (com.voteva.tests.grpc.model.v1.GGetTestRequest) returns (com.voteva.tests.grpc.model.v1.GGetTestResponse);

    rpc addTest (com.voteva.tests.grpc.model.v1.GAddTestRequest) returns (com.voteva.tests.grpc.model.v1.GAddTestResponse);

    rpc removeTest (com.voteva.tests.grpc.model.v1.GRemoveTestRequest) returns (com.voteva.common.grpc.model.Empty);

}
